Inscription et mot de passe oublie

--- a/templates/login-modal.html
+++ b/templates/login-modal.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="row mb-2">
                     <div class="col-6">
-                        <a href="#">Mot de passe oublié</a>
+                        <a href="/mot-de-passe-oublie">Mot de passe oublié</a>
                     </div>
                     <div class="col-6 text-right">
                         <a href="/inscription">S'inscrire</a>
