--- a/templates/ajout-biere.html
+++ b/templates/ajout-biere.html
@@ -46,6 +46,12 @@
                                class="form-control">
                     </div>
                     <div class="form-group">
+                        <label for="quantite">
+                            <span class="label-text">Quantite:</span>
+                        </label>
+                        <input type="number" id="quantite" name="quantite" min="1" class="form-control">
+                    </div>
+                    <div class="form-group">
                         <label for="ibu">
                             <span class="label-text">IBU:</span>
                         </label>
